# UnofficialRedditAPI

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PLAN.md
src_backend/: main.py
src_frontend/: main.py
